ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
  - host: "20.242.162.195.nip.io"
    http:
      paths:
      - path: /projects/.*
        pathType: Prefix
        backend:
          service:
            name: project-main-service
            port:
              number: 8100
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: pms-tool-ui-service
            port:
              number: 3000
